[gd_scene load_steps=2 format=3 uid="uid://c2kofpiqat8me"]

[ext_resource type="Script" uid="uid://c21v8hkc8g5g" path="res://Menus/GameMenus/pause_menu.gd" id="1_8jxwc"]

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_8jxwc")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -57.5
offset_right = 56.5
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2

[node name="Paused" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
